code/express-examples/kubernetes-manifests/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: ec-api
spec:
  selector:
    app: ec-api
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
  type: NodePort
