code/express-examples/kubernetes-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ec-api
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: ec-api
          servicePort: 3000
